# SolpHedge

./: .gitattributes  .gitignore  LICENSE  README.md  requirements.yaml  setup.cfg  solph_notebook.ipynb  solphedge_training.py
example/: LogS.tsv  deltaLogS.tsv
src/solphedge/: __init__.py  solphege.py
src/solphedge/models/: deltalogS_FFNN_model.pkl  deltalogS_features_novariance.json  deltalogS_scaler.json  neglogS_features_novariance.json  neglogS_scaler.json
