[metadata]
name = solphedge
version = attr: solphedge.__version__
description = pH-dependent solubility predictions for small molecules
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/solphedge

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.11

keywords =
    pH-dependent solubility
    cheminformatics
    QSAR

[options]
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    bluedesc-pywrapper>=0.0.5.post1
    cdk-pywrapper>=0.1.0
    mold2-pywrapper>=0.1.0
    padel-pywrapper>=1.0.5
    chemopy2>=1.0.5
    ml2json>=0.4.0
    pandas
    rdkit>=2024.3.1
    scikit-learn
    papyrus_structure_pipeline>=0.0.5

[options.packages.find]
where = src

[options.package_data]
* = *.*

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest
